--- a/cicd-template.yaml
+++ b/cicd-template.yaml
@@ -66,7 +66,7 @@ objects:
     strategy:
       jenkinsPipelineStrategy:
         jenkinsfile: |-
-          node('mvn') {
+          node('maven') {
              // define commands
              def mvnCmd = "mvn -s configuration/cicd-settings.xml"
 
@@ -135,17 +135,15 @@ objects:
     labels:
       role: jenkins-slave
   data:
-    # Slave is renamed to 'mvn' due to the bug https://github.com/openshift/jenkins-sync-plugin/issues/163
-    # Fixed in sync plugin 0.1.28 
     maven-pod-template: |-
       <org.csanchez.jenkins.plugins.kubernetes.PodTemplate>
         <inheritFrom></inheritFrom>
-        <name>mvn</name>
+        <name>maven</name>
         <privileged>false</privileged>
         <alwaysPullImage>false</alwaysPullImage>
         <instanceCap>2147483647</instanceCap>
         <idleMinutes>0</idleMinutes>
-        <label>mvn</label>
+        <label>maven</label>
         <serviceAccount>jenkins</serviceAccount>
         <nodeSelector></nodeSelector>
         <customWorkspaceVolumeEnabled>false</customWorkspaceVolumeEnabled>
