adjusted curl return codes

--- a/cicd-template.yaml
+++ b/cicd-template.yaml
@@ -622,7 +622,7 @@ objects:
       --form admin_confirm_passwd=${GOGS_PASSWORD} \
       --form admin_email=admin@gogs.com)
 
-      if [ $RETURN != "200" ]
+      if [ $RETURN != "200" ] && [ $RETURN != "302" ]
       then
         echo "ERROR: Failed to initialize Gogs"
         exit 255
