updated eap imagestream to 1.5

--- a/cicd-template.yaml
+++ b/cicd-template.yaml
@@ -103,7 +103,7 @@ objects:
                // clean up. keep the image stream
                sh "oc delete bc,dc,svc,route -l app=tasks -n ${DEV_PROJECT}"
                // create build. override the exit code since it complains about exising imagestream
-               sh "oc new-build --name=tasks --image-stream=jboss-eap70-openshift --binary=true --labels=app=tasks -n ${DEV_PROJECT} || true"
+               sh "oc new-build --name=tasks --image-stream=jboss-eap70-openshift:1.5 --binary=true --labels=app=tasks -n ${DEV_PROJECT} || true"
                // build image
                sh "oc start-build tasks --from-dir=oc-build --wait=true -n ${DEV_PROJECT}"
                // deploy image
